--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
